--- a/header.tex
+++ b/header.tex
@@ -311,8 +311,8 @@
 \newcommand{\hl}[1]{\textcolor{Red}{#1}}% prints in red
 
 %%% kommentare
-%\newcommand{\comm}[2]{}
-\newcommand{\comm}[2]{\hl{\(\spadesuit\){\bfseries #1: }}{\sffamily #2}\hl{\(\spadesuit\)}}
+\newcommand{\comm}[2]{}
+%\newcommand{\comm}[2]{\hl{\(\spadesuit\){\bfseries #1: }}{\sffamily #2}\hl{\(\spadesuit\)}}
 \newcommand{\olcomment}[1]{\comm{OL}{#1}}
 \newcommand{\cbcomment}[1]{\comm{CB}{#1}}
 \newcommand{\jkcomment}[1]{\comm{JK}{#1}}
@@ -327,7 +327,7 @@
 \begin{document}
 
 
-\title{\soosim, an OS simulator in Haskell}
+\title{\soosim, an OS Simulator in Haskell}
 \subtitle{Experience report}
 
 % \authorinfo{Oleg Lobachev}
