--- a/jabref.bib
+++ b/jabref.bib
@@ -8555,3 +8555,16 @@ doi = {10.1051/ita:2003022},
 optURL = {http://dx.doi.org/10.1051/ita:2003022},
 eprint = {http://journals.cambridge.org/article_S0988375403000225},
 }
+
+@article{CambridgeJournals:1350264,
+author = {L{\"a}ufer, Konstantin},
+title = {Type classes with existential types},
+journal = {Journal of Functional Programming},
+volume = {6},
+number = {03},
+pages = {485-518},
+year = {1996},
+doi = {10.1017/S0956796800001817},
+optURL = {http://dx.doi.org/10.1017/S0956796800001817},
+eprint = {http://journals.cambridge.org/article_S0956796800001817},
+}
